<resources>
    <string name="app_name">HotelsApp</string>
    <string name="home">Inicio</string>
    <string name="favourite">Favoritos</string>
    <string name="history">Vistos</string>
    <string name="settings">Ajustes</string>
    <string name="find">ENCUENTRA</string>
    <string name="findLabelHeader">ENCUENTRA</string>
    <string name="todayLabelHeader">HOY MISMO</string>
    <string name="hotelLabelHeader">TU HOTEL</string>
    <string name="seeLess">Ver menos</string>
    <string name="seeMore">Ver más</string>
    <string name="ratingLabel">PUNTUACIÓN</string>
    <string name="reviewsLabel">OPINIONES</string>
    <string name="placeLabel">UBICACIÓN</string>
    <string name="amenitiesLabel">COMODIDADES</string>
    <string name="showMore">Ver más</string>
    <string name="showLess">Ver menos</string>
    <string name="map">Mapa</string>
    <string name="error">Error</string>
</resources>
