<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/appBar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="@color/colorPrimary"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                    <com.santalu.autoviewpager.AutoViewPager
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:avp_autoScroll="true"
                            app:avp_duration="2000"
                            app:avp_indeterminate="true"
                            android:id="@+id/viewPager">

                    </com.santalu.autoviewpager.AutoViewPager>

                    <com.rbrooks.indefinitepagerindicator.IndefinitePagerIndicator
                            android:id="@+id/pageIndicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|bottom"
                            android:layout_marginBottom="@dimen/largeDimen"/>

                    <LinearLayout
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_gravity="top"
                                  android:layout_marginTop="@dimen/xLargeDimen"
                                  android:layout_marginStart="24dp"
                                  android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/firstHeaderTV"
                                android:textColor="@android:color/white"
                                android:textSize="28sp"
                                android:text="@string/findLabelHeader"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/secondHeaderTV"
                                android:paddingStart="24dp"
                                android:textColor="@android:color/white"
                                android:textSize="24sp"
                                android:text="@string/todayLabelHeader"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="@dimen/xLargeDimen"
                                android:id="@+id/thirdHeaderTV"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="36sp"
                                android:text="@string/hotelLabelHeader"/>

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hotelsRecyclerView"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:padding="@dimen/mediumDimen">
        </androidx.recyclerview.widget.RecyclerView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>