<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageContainer">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/imageview"
                        android:src="@drawable/image1"
                        android:scaleType="centerCrop"
                        android:contentDescription="@null"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintDimensionRatio="3:2"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageContainer"
                    android:layout_marginTop="-60dp"
                    android:layout_centerHorizontal="true"
                    android:clipToPadding="false"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="4dp"
                    app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:id="@+id/nameTextView"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:id="@+id/placeTextView"/>

                    <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:id="@+id/starsRatingBar"
                            android:theme="@style/RatingBar"
                            style="@style/Widget.AppCompat.RatingBar.Small"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAltPrimary"
                            android:id="@+id/descriptionTextView"/>

                    <include layout="@layout/view_separator"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/dark"
                            android:text="@string/ratingLabel"
                            android:id="@+id/ratingLabel"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:padding="8dp"
                            android:textSize="24sp"
                            android:background="@drawable/rectangle_filled_shape"
                            android:textColor="@android:color/white"
                            android:id="@+id/ratingTextView"/>

                    <include layout="@layout/view_separator"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/dark"
                            android:text="@string/reviewsLabel"
                            android:id="@+id/reviewsLabel"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:id="@+id/commentsRecyclerView">

                    </androidx.recyclerview.widget.RecyclerView>

                    <include layout="@layout/view_separator"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/dark"
                            android:text="@string/placeLabel"
                            android:id="@+id/placeLabel"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>